8332235: [lworld] introduce internal annotation to set the ACC_STRICT field